--- a/client/src/pages/Confidentiality/Confidentiality.module.scss
+++ b/client/src/pages/Confidentiality/Confidentiality.module.scss
@@ -1,7 +1,5 @@
-@import '~styles/custom';
-
 .sssh {
-  background-color: $decibels-teal !important;
+  // background-color: $decibels-teal !important;
   // background-image: url('/sssh-cropped.jpg');
   filter: sepia(20%) opacity(75%);
 }
