--- a/client/src/styles/custom.scss
+++ b/client/src/styles/custom.scss
@@ -27,21 +27,4 @@ $secondary: $decibels-red;
 // Headings
 $headings-color: $decibels-red;
 
-// Video Player
-:global {
-  .video-react .video-react-poster {
-    background-color: initial !important;
-  }
-
-  .video-react .video-react-control-bar {
-    display: flex !important;
-    font-family: Ubuntu;
-    font-size: 16px;
-    margin-bottom: -3em;
-  }
-
-  .video-react {
-    background-color: transparent;
-  }
-}
 
